--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql = true
 # H2 Database settings
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+jwt.secret=java-assessment
