--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8098
+server.port=8080
 
 #Datasource
 spring.datasource.url=jdbc:h2:mem:string-manipulation;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
@@ -6,7 +6,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 
 # H2 Database settings
 spring.h2.console.enabled=true
